# tearch-settings-manager

./: AUTHORS  CMakeLists.txt  README.md
resources/icons/: CMakeLists.txt
src/: CMakeLists.txt  tearch-category.desktop
src/libmsm/: ActionDialog.cpp  ActionDialog.h  ApplyDialog.cpp  ApplyDialog.h  ApplyDialog.ui  CMakeLists.txt  LanguageCommon.cpp  PageWidget.cpp  PageWidget.h  translations.qrc
src/libmsm/translations/: msm_ar.ts  msm_ast.ts  msm_az_AZ.ts  msm_bg_BG.ts  msm_ca.ts  msm_cs_CZ.ts  msm_cy.ts  msm_da.ts  msm_de.ts  msm_el.ts  msm_en.ts  msm_es.ts  msm_es_419.ts  msm_es_AR.ts  msm_fa.ts  msm_fa_IR.ts  msm_fi.ts  msm_fo.ts  msm_fr.ts  msm_gl_ES.ts  msm_he.ts  msm_hi.ts  msm_hr.ts  msm_hu.ts  msm_id_ID.ts  msm_is.ts  msm_it.ts  msm_ja.ts  msm_ka.ts  msm_lt.ts  msm_ml.ts  msm_ms.ts  msm_nb.ts  msm_nl.ts  msm_pl.ts  msm_pt_BR.ts  msm_pt_PT.ts  msm_ro.ts  msm_ru.ts  msm_sk_SK.ts  (+12 more)
src/modules/: CMakeLists.txt
src/modules/keyboard/: CMakeLists.txt  KeyboardModel.cpp  KeyboardModel.h  KeyboardModule.cpp  KeyboardModule.h  KeyboardPreview.cpp  KeyboardPreview.h  PageKeyboard.cpp  PageKeyboard.h  keyboard.qrc  msm_keyboard.desktop
src/modules/language_packages/: CMakeLists.txt  LanguagePackagesModule.cpp  LanguagePackagesModule.h  PageLanguagePackages.cpp  PageLanguagePackages.h  msm_language_packages.desktop
src/modules/locale/: CMakeLists.txt  (+4 more)
src/msm/: CMakeLists.txt  MsmApplication.cpp  MsmWindow.cpp  MsmWindow.h  MsmWindow.ui  main.cpp  org.tearch.pkexec.tearch-settings-manager-gui.policy  tearch-settings-manager  tearch-settings-manager.desktop
(+13 files in other folders)
